skins/standard/global.css
/* ... */
#comment_tabs {
    border-spacing: 0;
}

.comment_tab {
    display: table-cell;
    border: 1px solid silver;
    padding: 2px 1em;
    cursor: pointer;
    background: transparent;
}

.active_comment_tab {
    background: #fff;
    font-weight: bold;
}

#comment_preview {
    border: 1px solid silver;
    padding: 1px;
    overflow: auto;
    margin: 0px;
}

#comment_preview_text {
    margin: 0px;
    width: auto;
}

#comment_preview_loading {
    font-style: italic;
}

#comment {
    margin: 0px 0px 1em 0px;
}

/*******************/
/* Form Validation */
/*******************/

.validation_error_text {
    font-size: 120%;
    color: #B70000;
    font-weight: bold;
}

.validation_error_field, input.validation_error_field {
    border: 2px solid #B70000;
    background-color: #FFEBEB;
}

/* always use our font and size */
.ui-widget {
    font-family: inherit !important;
    font-size: small !important;
}

/* menu items shouldn't be bold */
.ui-menu .ui-menu-item {
    font-weight: normal !important;
}

/* autocomplete */

.autocomplete-suggestions {
    border: 1px solid #999;
    background: #fff;
    color: #000;
    overflow-x: hidden;
    overflow-y: auto;
    cursor: pointer;
    width: auto !important;
}

.autocomplete-suggestion {
    padding: 2px 5px;
    white-space: nowrap;
    overflow: hidden;
    width: 100%;
    margin-right: 1.5em;
}

.autocomplete-selected {
    background: #426fd9;
    color: #FFF
}

.autocomplete-running {
    background-image: url(../../images/throbber.gif) !important;
    background-repeat: no-repeat !important;
    background-position: right 8px center !important;
}

#login .field-login, #login .field-password {
    line-height: 32px;
    display: block;
    padding-top: 2px;
    padding-bottom: 2px;
}

#login .field-login label, #login .field-password label {
    clear: left;
    width: 7em;
    display: inline-block;
    font-weight: bold;
}

#login .field-restrict, #login .field-remember {
    margin-left: 7em;
}

@font-face{
    font-family: 'Fira Sans';
    src: local('Fira Sans'), local('FiraSans'),
         url('fira/FiraSans-Regular.woff') format('woff');
    font-weight: 400;
    font-style: normal;
}

@font-face{
    font-family: 'Fira Sans';
    src: local('Fira Sans Italic'), local('FiraSansItalic'),
         url('fira/FiraSans-Italic.woff') format('woff');
    font-weight: 400;
    font-style: italic;
}

@font-face{
    font-family: 'Fira Sans';
    src: local('Fira Sans SemiBold'), local('FiraSansSemiBold'),
         url('fira/FiraSans-SemiBold.woff') format('woff');
    font-weight: 600;
    font-style: normal;
}

@font-face{
    font-family: 'Fira Sans';
    src: local('Fira Sans SemiBold Italic'), local('FiraSansSemiBoldItalic'),
         url('fira/FiraSans-SemiBoldItalic.woff') format('woff');
    font-weight: 600;
    font-style: italic;
}

@font-face{
    font-family: 'Fira Sans';
    src: local('Fira Sans Bold'), local('FiraSansBold'),
         url('fira/FiraSans-Bold.woff') format('woff');
    font-weight: 700;
    font-style: normal;
}

@font-face{
    font-family: 'Fira Sans';
    src: local('Fira Sans Bold Italic'), local('FiraSansBoldItalic'),
         url('fira/FiraSans-BoldItalic.woff') format('woff');
    font-weight: 700;
    font-style: italic;
}

@font-face{
    font-family: 'Fira Mono';
    src: local('Fira Mono'), local('FiraMono'),
         url('fira/FiraMono-Regular.woff') format('woff');
    font-weight: 400;
    font-style: normal;
}

@font-face{
    font-family: 'Fira Mono';
    src: local('Fira Mono Bold'), local('FiraMonoBold'),
         url('fira/FiraMono-Bold.woff') format('woff');
    font-weight: 600;
    font-style: normal;
}

body {
    background: #f6f4ec;
    background-image: url(../../images/noise.png);
    background-image: url(../../images/noise.png), -moz-linear-gradient(#d7d3c8, #f6f4ec 400px);
    background-image: url(../../images/noise.png), -webkit-linear-gradient(#d7d3c8, #f6f4ec 400px);
    background-image: url(../../images/noise.png), linear-gradient(#d7d3c8, #f6f4ec 400px);
    background-repeat: repeat, repeat-x;
    color: #404040;
}

body, td, th, input, select, option, optgroup, .text_input {
    font-family: "Fira Sans", "Open Sans", "Helvetica Neue", Arial, Helvetica, sans-serif;
}

a, #header a, #header a:visited, #footer a, #footer a:visited {
    color: #0095dd;
}

a:hover, #header a:hover, #footer a:hover {
    color: #00539f;
}

select[multiple], textarea, input[type=text], input[type=password],
input[type=email], input[type=url], input[type=number], input:not([type]), .text_input, .yui-ac-input {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    border: 1px solid #b2b2b2;
    border-radius: .25em;
    box-shadow: inset 0 1px rgba(0, 0, 0, 0.1);
    background: white;
    padding: 4px 3px 5px;
    color: #404040;
    vertical-align: top;
}

select[multiple], .text_input, .yui-ac-input, input {
    font-size: 1em;
}

select[multiple]:focus, textarea:focus, .text-input:focus, -yui-ac-input:focus, input:focus {
    border-color: #42a4e0;
    -webkit-box-shadow: 0 0 0 2px rgba(73,173,227,0.4);
    -moz-box-shadow: 0 0 0 2px rgba(73,173,227,0.4);
    box-shadow: 0 0 0 2px rgba(73,173,227,0.4);
}

select, select[multiple] {
    font-size: 12px;
}

hr {
    border: none;
    height: 1px;
    color: #ccc;
    background-color: #ccc;
    margin: 1em 0;
}

#changeform hr {
    display: none;
}

#header {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    background: #e5e3dc;
    background: -moz-linear-gradient(#e5e3dc, #ecebe5);
    background: -webkit-linear-gradient(#e5e3dc, #ecebe5);
    background: linear-gradient(#e5e3dc, #ecebe5);
    border-radius: 0;
    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
    border-top: 2px solid rgb(255, 255, 255);
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
    margin: -15px -15px 0 -15px;
    color: transparent;
}
/* ... */

